# rust-render-engine

./: .gitignore  .travis.yml  Cargo.toml  README.md
bench/: bench.rs
bench/scenes/: sphere_1k.json  suzanne_low.json
rapport/: bibliography.bib  compile_rapport.sh  intro.md  rapport.latex
render_engine/: Cargo.toml
render_engine/src/: main.rs  math.rs  obj3D.rs  render.rs  scene.rs
scenes/: scene1.json  suzanne_ambient_occlusion.json  suzanne_high.json  suzanne_low.json
scenes/materials/: ambient_occlusion.json  checker.json  material1.json  normals.json  solid_green.json  solid_grey.json  solid_red.json  template_material.json
scenes/materials/templates/: template_material_solid.json  template_material_texture.json
src/: angle.rs  bounding_box.rs  color.rs  color_float.rs  filter.rs  img.rs  io_utils.rs  lib.rs  main.rs  material.rs  math.rs  obj3D.rs  obj_parser.rs  ray.rs  render.rs  sampler.rs  scene.rs
src/filter/: .filters.rs.swp  filters.rs  mod.rs
src/geometry/: .obj3d.rs.swp  bounding_box.rs  mod.rs  obj3d.rs  obj_parser.rs
src/light/: mod.rs  point_light.rs
src/material/: ambient_occlusion.rs  bsdf.rs  channel.rs  flat_material.rs  mod.rs
src/renderer/: block.bk  block.rs  mod.rs  render.rs  sampler.rs
src/sampler/: mod.rs  monte_carlo.rs  samplers.rs
src/tools/: mod.rs  monte_carlo.rs  shading_coordinates.rs
