[package]
name = "render_engine"
version = "0.3.0"
authors = ["Paul Florence <florencepaul@hotmail.fr>"]

[[bin]]
name = "bench"
path = "bench/bench.rs"

[[bin]]
name = "render_engine"
path = "src/main.rs"

[lib]
name = "lib_render"
path = "src/lib.rs"

[dependencies]
serde_derive = "0.9.*"
serde_json = "0.9.*"
image = "*"
clippy = {version = "*", optional = true}
getopts = "0.2"
num = "0.1"
rayon = "*"
colored="*"

[dependencies.serde]
version = "0.9.*"
default-features = false
features = ["alloc","collections","std"]

[features]
default = ["clippy"]
